Fix test URL usage to use URI